--- a/WordCounter/app/src/main/res/layout/activity_settings.xml
+++ b/WordCounter/app/src/main/res/layout/activity_settings.xml
@@ -6,4 +6,18 @@
     android:layout_height="match_parent"
     tools:context="com.codeclan.example.wordcounter.SettingsActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/settings_page" />
 </android.support.constraint.ConstraintLayout>
