--- a/WordCounter/app/src/main/res/layout/activity_settings.xml
+++ b/WordCounter/app/src/main/res/layout/activity_settings.xml
@@ -14,10 +14,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="Feature coming soon."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/settings_page" />
+        tools:text="Feature coming soon." />
 </android.support.constraint.ConstraintLayout>
