--- a/WordCounter/app/src/main/res/layout/activity_about.xml
+++ b/WordCounter/app/src/main/res/layout/activity_about.xml
@@ -7,13 +7,14 @@
     tools:context="com.codeclan.example.wordcounter.AboutActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="143dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Name: Marta Likes: books, museums and dachshunds Dislikes: cooking "
+        android:text="Name: Marta Likes: books, museums and dachshunds Dislikes: cooking"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
