--- a/WordCounter/app/src/main/res/layout/activity_concordance.xml
+++ b/WordCounter/app/src/main/res/layout/activity_concordance.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="151dp"
+        android:layout_height="206dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
